<resources>
    <string name="app_name">Task Manager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_enter">LOGIN</string>
    <string name="msg_welcome">Welcome %s!</string>
    <string name="lbl_weight">Weight</string>
    <string name="lbl_height">Height</string>
    <string name="msg_calculate">Calculate</string>
    <string name="msg_imc">IMC: %s</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_description">Description</string>
    <string name="msg_include">Include</string>
    <string name="lbl_add">Add</string>
    <string name="msg_required">Field required!</string>
    <string name="msg_save_success">Save successfull!</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_delete">Delete</string>
    <string name="msg_delete_successfull">Delete successfull!</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="msg_confirm_delete">Want to delete this record?</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_new">New</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_user">User</string>
    <string name="msg_failure">Failure</string>
    <string name="lbl_task_list">Task List</string>
    <string name="lbl_create_task">New Task</string>
    <string name="lbl_new_user">New User</string>
    <string name="lbl_create_label">New Label</string>
    <string name="lbl_zip_code">Zip code</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_street">Street</string>
    <string name="lbl_neighborhood">Neighborhood</string>
    <string name="lbl_city">City</string>
    <string name="lbl_state">State</string>
    <string name="txt_test">Test</string>
    <string name="lbl_update">Update</string>
</resources>
