<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_name"/>

    <EditText
        android:id="@+id/editTextDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerLabel"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_gravity="start"
            android:layout_height="wrap_content">
        </Spinner>

        <Button
            android:id="@+id/buttonNewLabel"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_gravity="start"
            android:text="@string/lbl_add"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>